HOME modified & SNN buttons added

--- a/french/templates/french/list_fr.html
+++ b/french/templates/french/list_fr.html
@@ -4,9 +4,22 @@
 
 <head>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DKMERV53"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-20DKMERV53');
+  </script>
+
   <meta charset="utf-8">
   <title>{{title}}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -26,35 +39,35 @@
 
   <!-- ヘッダ/Nav-Bar -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">GUTI ! Français</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">GUTI ! Français</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item">
-            <a class="nav-link" href="../main_fr">Practice</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../main_fr">Practice</a>
+        </li>
 
-          </li>
+        </li>
 
 
-          <li class="nav-item active">
-            <a class="nav-link" href="#">List <span class="sr-only">(current)</span></a>
-          </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">List <span class="sr-only">(current)</span></a>
+        </li>
 
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/.">Home</a>
-          </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/.">Home</a>
+        </li>
 
-        </ul>
+      </ul>
 
-      </div>
-    </nav>
+    </div>
+  </nav>
 
 
 
@@ -68,7 +81,7 @@
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col">Modèle</th>
-          <th scope="col">Verbs</th>
+          <th scope="col">Verbes</th>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -95,13 +108,13 @@
         <td>laisser</td>
         <td>penser</td>
         </tr>
-      </tr>
-      <th scope="row"></th>
-      <td></td>
-      <td></td>
-      <td>chercher</td>
-      <td>demander</td>
-      </tr>
+        </tr>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td>chercher</td>
+        <td>demander</td>
+        </tr>
         <tr>
           <th scope="row"></th>
           <td>(2)</td>
@@ -619,7 +632,7 @@
 
 </body>
 
-<footer class="footer mt-auto py-3 bg-light" >
+<footer class="footer mt-auto py-3 bg-light">
   <div class="container text-right">
     <small>&copy; Copyright 2021 Luciano</small>
   </div>
