--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -154,6 +154,14 @@
     </div>
   </div>
 
+  <hr>
+
+    <div class="container-fluid">
+      <div class="d-flex justify-content-center">
+        (ads)
+      </div>
+    </div>
+
   <div class="container-fluid">
     <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
     Verbes
@@ -178,13 +186,7 @@
       </div>
     </div>
 
-<hr>
 
-  <div class="container-fluid">
-    <div class="d-flex justify-content-center">
-      (links)
-    </div>
-  </div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
