--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -11,6 +11,19 @@
   <meta name="keywords" content='conjugation,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DKMERV53"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-20DKMERV53');
+  </script>
+
 
 
   <link rel="stylesheet" type="text/css" href={% static 'french/css/normalize.css' %} />
@@ -43,18 +56,16 @@
     <p>The name of this site "GUTI !" comes from this proverb.</p>
 
     <p>
-      One of the difficulties in studying certain foreign languages is the verb conjugation.
-      How the native speakers of those languages have obtained that of their native language ?
-      They did't "learn" it. They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
+      One of the difficulties in studying certain foreign languages is the verb conjugation. How the native speakers of those languages have obtained it ? They didn't "learn" it. They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
     </p>
 
     <p>
-    <h5><strong>We provide you an ideal tool to simulate that.</strong></h5>
+    <h5><strong>We provide you with an ideal tool to simulate that.</strong></h5>
     </p>
 
-    <p>Q&As of a verb conjugation are provided randomlly, according to the conditions you set (i.e. level of conjugation type/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
+    <p>Q&As of a verb conjugation are provided randomly, according to the conditions you set (i.e. level of conjugation type/mode/tense). Verbs are attentively selected (see "List" page) to cover almost all types of conjugation.</p>
 
-    <p>Then all you have to do is just practicing it over and over again to "install" it into yourself. At anytime & anywhere, to your best satisfaction.</p>
+    <p>Then all you have to do is just practicing it over and over again to "install" it into yourself. At any time & anywhere, to your best satisfaction.</p>
 
   </div>
 
@@ -65,12 +76,33 @@
     <h5>How to use:</h5><br>
 
     <ol>
-      <li>Click the flag of the language you'd like to try, which takes you to "Practice" page. </li>
-      <li>Then firstlly, <span style="border-bottom: solid 2px red;"> check at least more than one box</span>, in "Mode & Tense" and "Verbs" section respectively.</li>
-      <li>Then, start your practice by pressing "Question", then "Answer" button !! </li>
-      <li>For the next question, just click "Question" button again.</li>
-      <li>You can change the conditions at anytime you want, by checking/unchecking each check box. </li>
-      <li>To know which types & verbs are included in each level, go to "List" page via Navigation Bar. </li>
+      <li>Click the flag of the language you'd like to "get used to", which takes you to "Practice" page.</li>
+      <li>Before start practice, set the conditions you'd like to try.
+        <ul>
+          <li>Check at least more than one box in "Mode and tense" and "Verbs" section respectively</li>
+          <li>You can select as many conditions as you like, by clicking/unclicking checkboxes.</li>
+          <li>In "Verbs" section, numbers correspond to the level of conjugation types as follows;
+
+            <ul style="list-style:none">
+              <li>(1) Beginners level</li>
+              <li>(2) Intermediates level</li>
+              <li>(3) Advanced level</li>
+            </ul>
+
+          <li>To know which types of the conjugations & verbs are included in each level, go to "List" page via Navigation Bar.</li>
+        </ul>
+      </li>
+      <li>Then, you can start practice !
+        <ul>
+          <li>At first, click "Question" button to have a verb with conditions to be conjugated.</li>
+          <li>Then, click "Answer" button to get the answer (conjugated verb).</li>
+          <li>For the next question, just click "Question" button again. </li>
+
+          <li>You can change the conditions at any time you want, by checking/unchecking each checkbox.</li>
+
+        </ul>
+      </li>
+
     </ol>
   </div>
 
@@ -94,19 +126,38 @@
 
     <div class="container-fluid">
       <div class="d-flex justify-content-center">
-        (links)
+
+        <div class="row">
+          <div class="col">
+            <div class="fb-like" data-href="https://gutibyluciano.pythonanywhere.com/" data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div>
+          </div>
+          <div class="col"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <div class="col">
+            <div class="line-it-button" data-lang="ja" data-type="share-b" data-ver="3" data-url="https://social-plugins.line.me/ja/how_to_install#lineitbutton" data-color="default" data-size="small" data-count="false" style="display: none;"></div>
+            <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v10.0" nonce="W3JieF1u"></script>
 
-<footer class="footer mt-auto py-3 bg-light" >
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v10.0" nonce="cw3CK4T7"></script>
+<footer class="footer mt-auto py-3 bg-light">
   <div class="container text-right">
     <small>&copy; Copyright 2021 Luciano</small>
   </div>
