--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -6,6 +6,19 @@
 
   <meta charset="utf-8">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-20DKMERV53"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-20DKMERV53');
+  </script>
+
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,30 +50,30 @@
 
   <!-- ヘッダ/Nav-Bar -->
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">GUTI ! Français</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">GUTI ! Français</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Practice <span class="sr-only">(current)</span></a>
-      </li>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Practice <span class="sr-only">(current)</span></a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="../list_fr">List</a>
-      </li>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/.">Home</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+        <li class="nav-item">
+          <a class="nav-link" href="../list_fr">List</a>
+        </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/.">Home</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-{% load static %}
+  {% load static %}
 
   <!-- 単語 -->
 
@@ -138,12 +151,12 @@
     </div>
   </div>
 
-<hr>
+  <hr>
 
   <div class="container-fluid">
 
     <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
-    Mode et Temps
+      Mode et Temps
     </div>
 
     <div class="row">
@@ -156,15 +169,11 @@
 
   <hr>
 
-    <div class="container-fluid">
-      <div class="d-flex justify-content-center">
-        (ads)
-      </div>
-    </div>
+
 
   <div class="container-fluid">
     <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
-    Verbes
+      Verbes
     </div>
     <div class="row">
       <div class="col-3 col-md-3">{{ form.ER|as_crispy_field }} </div>
@@ -180,22 +189,18 @@
 
   <hr>
 
-    <div class="container-fluid">
-      <div class="d-flex justify-content-center">
-        (ads)
-      </div>
-    </div>
 
 
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 
-<footer class="footer mt-auto py-3 bg-light" >
+<footer class="footer mt-auto py-3 bg-light">
   <div class="container text-right">
     <small>&copy; Copyright 2021 Luciano</small>
   </div>
