--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -1,13 +1,13 @@
 {% load static %}
 <!doctype html>
-<html lang="fr">
+<html lang="en-US">
 
 <head>
 
   <meta charset="utf-8">
-  <title>GUTI !</title>
+  <title>GUTI !   - French Verb Conjugation Installer </title>
   <meta name='author' content='Luciano'>
-  <meta name="description" content='An ideal tool to "install" conjugation into yourself.'>
+  <meta name="description" content="An  ideal tool (drill)  to 'install' french conjugation into yourself for FREE. There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This site provide you with an idea condition to make it possible. With this drill web app, you can practice almost all type of conjugation, at any time & anywhere, to your best satisfaction.">
   <meta name="keywords" content='conjugation,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
