Home japanese added

--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -5,11 +5,10 @@
 <head>
 
   <meta charset="utf-8">
-  <title>GUTI ! - French Verb Conjugation Installer </title>
+  <title>GUTI !   - French Verb Conjugation Installer </title>
   <meta name='author' content='Luciano'>
-  <meta name="description"
-    content="An  ideal & simple tool (drill app)  to 'install' french verb conjugation into yourself.  There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This drill web app make it possible for FREE !!いつでもどこでも無料で使える理想的なフランス語動詞活用ドリルアプリ。目指せ活用の達人！">
-  <meta name="keywords" content='french verb conjugation, フランス語動詞活用,Drill,ドリル,free,無料'>
+  <meta name="description" content="An  ideal tool (drill)  to 'install' french conjugation into yourself for FREE. There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This site provide you with an idea condition to make it possible. With this drill web app, you can practice almost all type of conjugation, at any time & anywhere, to your best satisfaction.">
+  <meta name="keywords" content='conjugation,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -57,8 +56,7 @@
     <p>The name of this site "GUTI !" comes from this proverb.</p>
 
     <p>
-      One of the difficulties in studying certain foreign languages is the verb conjugation. How the native speakers of those languages have obtained it ? They didn't "learn" it. They just "get used to it". In other words, they have "installed" it
-      naturally through countless times of experiences.<br>
+      One of the difficulties in studying certain foreign languages is the verb conjugation. How the native speakers of those languages have obtained it ? They didn't "learn" it. They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
     </p>
 
     <p>
@@ -145,82 +143,7 @@
     </div>
   </div>
 
-  <hr>
 
-  <div class="container-fluid">
-
-    <p>
-    <h4>理想的な動詞活用インストーラー　"GUTI!"</h4>
-    </p>
-
-    <p>
-      外国語の習得の大きなハードルのひとつ、動詞活用。<br>
-      これを本当に「使える」レベルにまでマスターするには、九九を覚えた時のように、頭で考えず反射的に出てくるようにする必要があります。つまり、
-
-      <p>
-      <h5>「習うより慣れよ！」</h5>
-      </p>
-
-      繰り返し練習して、いわば「インストール」してしまえばいいのです。
-      <br>
-    </p>
-
-    <p>
-      当サイトの名称は、この「習うより慣れよ！」の英語版 (Get Used To It rather than learn!) の頭文字から付けました。<br>
-      この唯一の王道を効果的に実現する目的で作られたのが、このWebアプリ "GUTI!" です。
-    </p>
-
-    <p>
-      必要に応じて設定した条件で問題がランダムに出され、ボタンを押すとその答えが表示される、ただそれだけのシンプルなツールです。出題される動詞は注意深く選ばれており、ほぼ全てのタイプの活用の形をカバーしています。
-    </p>
-
-    <p>後は、繰り返しやるだけ。<br>いつでも、どこでも、お好きな時に、満足いくまで。
-</p>
-
-  </div>
-
-  <hr>
-
-  <div class="container-sm">
-    <p>
-    <h5>使い方:</h5><br>
-
-    <ol>
-      <li>覚えたい言語の国旗のボタンをクリックして下さい。その言語の"Practice"ページが開かれます。</li>
-      <li>始める前に、まず条件を設定します。
-        <ul>
-          <li>覚えたい条件のボックスをクリックしてチェックを入れて下さい。</li>
-          <li>チェックを外すには、もう一度クリックします。</li>
-          <li>"Mode and tense"（法／時制）と"Verbs"（動詞の種類／レベル）のそれぞれのセクションで、少なくとも1つ以上のボックスにチェックを入れるようにして下さい。</li>
-          <li>条件は、お好きなだけ選べますので、その時の学習ニーズに合わせて自由に選びましょう。</li>
-          <li>設定した条件は、いつでも自由に変更可能です。</li>
-
-
-          <li>"Verbs"セクションの番号は、それぞれ以下のレベルに対応しています;
-
-            <ul style="list-style:none">
-              <li>(1) 初心者レベル</li>
-              <li>(2) 中級者レベル</li>
-              <li>(3) 上級者レベル</li>
-            </ul>
-
-          <li>それぞれのレベルにどのような活用タイプとそれに対応する動詞が用意されているのかは、ナビゲーションバーから"List"ページに飛ぶと、そこで確認できます。</li>
-        </ul>
-      </li>
-      <li>条件が設定できたら、トレーニング開始！
-        <ul>
-          <li>まず "問題"ボタンをクリックします。すると選ばれた条件に当てはまる動詞と活用させる条件がランダムに出題されます。</li>
-          <li>"答え"ボタンをクリックすれば、その答えが表示されます。</li>
-          <li>次の問題に行くには、再度 "問題"ボタンをクリックします。 </li>
-
-          <li>後は、このプロセスを繰り返すだけです。</li>
-
-        </ul>
-      </li>
-
-    </ol>
-  </div>
-  <hr>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
