Home description modified

--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <title>GUTI !   - French Verb Conjugation Installer </title>
   <meta name='author' content='Luciano'>
-  <meta name="description" content="An  ideal tool (drill)  to 'install' french conjugation into yourself for FREE. There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This site provide you with an idea condition to make it possible. With this drill web app, you can practice almost all type of conjugation, at any time & anywhere, to your best satisfaction.">
-  <meta name="keywords" content='conjugation,動詞活用'>
+  <meta name="description" content="An  ideal & simple tool  to 'install' french verb conjugation into yourself.  There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This drill web app make it possible for FREE !!いつでもどこでも無料で使える理想的なフランス語動詞活用ドリルアプリ。目指せ活用の達人！">
+  <meta name="keywords" content='verb conjugation,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
