--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -5,10 +5,10 @@
 <head>
 
   <meta charset="utf-8">
-  <title>GUTI !   - French Verb Conjugation Installer </title>
+  <title>GUTI !   - French & Italian Verb Conjugation Installer </title>
   <meta name='author' content='Luciano'>
-  <meta name="description" content="An  ideal & simple tool  to 'install' french verb conjugation into yourself.  There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This drill web app make it possible for FREE !!いつでもどこでも無料で使える理想的なフランス語動詞活用ドリルアプリ。目指せ活用の達人！">
-  <meta name="keywords" content='verb conjugation,動詞活用'>
+  <meta name="description" content="An  ideal & simple tool  to 'install' French & Italian verb conjugation into yourself.  There's no other way but 'Get Used To It rather than learn' to master verb conjugation at practical level. This drill web app make it possible for FREE !!いつでもどこでも無料で使える理想的なフランス語/イタリア語動詞活用ドリルアプリ。「習うより慣れよ！」で使えるレベルへ。">
+  <meta name="keywords" content='French,Italian,verb conjugation,フランス語,イタリア語,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -117,7 +117,10 @@
     <div class="d-flex justify-content-center">
       <div class="d-flex row align-items-center" style="height:80px">
         <div class="col">
-          <a href="french/main_fr"><img src="static/home/images/frenchFrag.gif" alt="FrenchFrag"></a>
+          <a href="french/main_fr"><img src="static/home/images/frenchFrag.gif" alt="French Frag"></a>
+        </div>
+        <div class="col">
+          <a href="italian/main_it"><img src="static/home/images/italianFrag.gif" alt="Italian Frag"></a>
         </div>
       </div>
     </div>
