--- a/italian/templates/italian/main_it.html
+++ b/italian/templates/italian/main_it.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!doctype html>
-<html lang="fr">
+<html lang="it">
 
 <head>
 
@@ -36,11 +36,11 @@
 
   <!-- ヘッダ /jumbotron-->
 
-  <div class="jumbotron jumbotron-extend">
+  <div class="jumbotron jumbotron-italian">
 
     <div class="container-fluid jumbotron-container">
       <div class="vh-10">
-        <h4 class="site-name">Habituez-vous<p>plustôt que d'apprendre !</h4>
+        <h3 class="site-name">Abituati prima di imparare !</h3>
         <p></p>
       </div>
     </div>
@@ -50,7 +50,7 @@
   <!-- ヘッダ/Nav-Bar -->
 
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">GUTI ! Français</a>
+    <a class="navbar-brand" href="#">GUTI ! Italiano</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -62,7 +62,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../list_fr">List</a>
+          <a class="nav-link" href="../list_it">List</a>
         </li>
         </li>
         <li class="nav-item">
@@ -130,14 +130,14 @@
 
         <div class="d-flex justify-content-center">
           <div class="col-6 text-right">
-            <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
-              Question
+            <button type="submit" name="button_question" value="Question" class="btn btn-italian-green ">
+              Questione
             </button>
 
           </div>
           <div class="col-6 text-left">
-            <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red">
-              Réponse
+            <button type="submit" name="button_answer" value="Answer" class="btn btn-italian-red">
+              Risposta
             </button>
           </div>
         </div>
@@ -155,14 +155,14 @@
   <div class="container-fluid">
 
     <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
-      Mode et Temps
+      Modo e Tempo
     </div>
 
     <div class="row">
-      <div class="col-6 col-md-3">{{ form.INDICATIF|as_crispy_field }} </div>
-      <div class="col-6 col-md-3">{{ form.CONDITIONNEL|as_crispy_field }} </div>
-      <div class="col-6 col-md-3">{{ form.SUBJONCTIF|as_crispy_field }} </div>
-      <div class="col-6 col-md-3">{{ form.IMPÉRATIF|as_crispy_field }} </div>
+      <div class="col-6 col-md-3">{{ form.INDICATIVO|as_crispy_field }} </div>
+      <div class="col-6 col-md-3">{{ form.CONGIUNTIVO|as_crispy_field }} </div>
+      <div class="col-6 col-md-3">{{ form.CONDIZIONALE|as_crispy_field }} </div>
+      <div class="col-6 col-md-3">{{ form.IMPERATIVO|as_crispy_field }} </div>
     </div>
   </div>
 
@@ -172,13 +172,14 @@
 
   <div class="container-fluid">
     <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
-      Verbes
+      Verbi
     </div>
     <div class="row">
-      <div class="col-3 col-md-3">{{ form.ER|as_crispy_field }} </div>
-      <div class="col-3 col-md-3">{{ form.IR|as_crispy_field }} </div>
-      <div class="col-3 col-md-3">{{ form.RE|as_crispy_field }}</div>
-      <div class="col-3 col-md-3">{{ form.Illéguliers|as_crispy_field }}</div>
+      <div class="col-3 col-md-3">{{ form.ARE|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.IRE|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.ERE|as_crispy_field }}</div>
+      <div class="col-3 col-md-3">{{ form.ALTRI|as_crispy_field }}</div>
+
     </div>
   </div>
 
