--- a/italian/templates/italian/main_it.html
+++ b/italian/templates/italian/main_it.html
@@ -131,7 +131,7 @@
         <div class="d-flex justify-content-center">
           <div class="col-6 text-right">
             <button type="submit" name="button_question" value="Question" class="btn btn-italian-green ">
-              Questione
+              Domanda
             </button>
 
           </div>
