description added & Italian table corrected

--- a/italian/templates/italian/list_it.html
+++ b/italian/templates/italian/list_it.html
@@ -320,8 +320,8 @@
 
         <tr>
           <th scope="row"></th>
-          <td>USIRE</td>
-          <td>usire</td>
+          <td>USCIRE</td>
+          <td>uscire</td>
           <td></td>
         </tr>
 
@@ -335,7 +335,7 @@
 
         <tr>
           <th scope="row">-IRE (3)</th>
-          <td>APPRIRE</td>
+          <td>APPARIRE</td>
           <td>apparire</td>
           <td>scomparire</td>
         </tr>
@@ -547,7 +547,7 @@
         <th scope="row">-SI</th>
         <td>ALZARSI</td>
         <td>alzarsi</td>
-        <td>rlavarsi</td>
+        <td>lavarsi</td>
         </tr>
         <tr>
           <th scope="row"></th>
