--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -20,6 +20,11 @@
   </script>
 
   <title>{{title}}</title>
+
+  <meta name='author' content='Luciano'>
+  <meta name="description" content="An  ideal & simple tool French conjugation installer for FREE !!いつでもどこでも無料で使える理想的なフランス語動詞活用ドリルアプリ。">
+  <meta name="keywords" content='French,verb conjugation,フランス語,動詞活用,フランス語動詞活用'>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
